# anki-tui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  brew.md  tmux.md
.claude/: settings.json
.github/scripts/: update-homebrew-formula.rb
.github/workflows/: release.yml
scripts/: release.sh
src/: anki.rs  app.rs  main.rs  media.rs  ui.rs
src/app/: decklist.rs  persist.rs  review.rs
