[package]
name = "anki-tui"
version = "0.1.5"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.42"
directories = "6.0.0"
html2text = "0.17.1"
image = "0.25.10"
ratatui = "0.30.1"
ratatui-image = { version = "11.0.4", default-features = false, features = [
  "image-defaults",
  "crossterm",
] }
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
